--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^4.1.4",
+    "dblapi.js": "^2.1.0",
     "discord.js": "^11.3.2",
     "discord.js-commando": "^0.10.0",
+    "enmap": "^2.6.3",
+    "hashids": "^1.1.4",
     "lowdb": "^1.0.0",
     "request": "^2.87.0",
     "sqlite": "^2.9.2"
